--- a/index.html
+++ b/index.html
@@ -41,13 +41,14 @@
 
   <!-- Font Awesome Icons -->
   <!--<link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">-->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    type="text/css">
 
   <!-- Google Fonts -->
   <link
     href="https://fonts.googleapis.com/css?family=Gothic+A1|Merriweather+Sans:400,700|Merriweather:400,300,300italic,400italic,700,700italic&display=swap"
     rel="stylesheet">
-    
+
   <noscript><img height="1" width="1" style="display:none"
       src="https://www.facebook.com/tr?id=461691108031344&ev=PageView&noscript=1" /></noscript>
   <!-- End Facebook Pixel Code -->
@@ -115,7 +116,9 @@
           <div id="store-area1" class="mt-4 mb-3" style="display: none">
             <a id="store-button1" href="ms-windows-store://pdp/?productid=9N798V33QDF8" style="display: inline-block;">
               <div class="img-hover-container" style="width: 200px;">
-                <img src="https://1.bp.blogspot.com/-OcTM0sQ-P3Q/Xf2BfsK5A0I/AAAAAAAAHl8/n0jqczizugQFFxLyr6VmVPC_qHaIzml9gCLcBGAsYHQ/s1600/store_ko.png" alt="다운로드 버튼" class="img-hover-image">
+                <img
+                  src="https://1.bp.blogspot.com/-OcTM0sQ-P3Q/Xf2BfsK5A0I/AAAAAAAAHl8/n0jqczizugQFFxLyr6VmVPC_qHaIzml9gCLcBGAsYHQ/s1600/store_ko.png"
+                  alt="다운로드 버튼" class="img-hover-image">
                 <div class="img-hover-overlay">
                   <div class="img-hover-text">마이크로소프트 계정 No !!<br>로그인창 무시</div>
                 </div>
@@ -128,8 +131,12 @@
 
           <div id="share-button" style="display: none">
             <!--<a id="share" class="btn btn-red btn-xl js-scroll-trigger mt-5" href="#"><span><i class="fa fa-share"></i>&nbsp;기억해 두기</span></a>-->
-            <div id="socials" class="da-share-html da-fb da-tw"></div>
-            <p class="mt-3"><bw>윈도우10 전용</bw></p>
+            <!--<div id="socials" class="da-share-html da-fb da-tw"></div>-->
+            <a id="kakao-link-btn" href="javascript:;">
+              <img src="//dev.kakao.com/assets/img/about/logos/kakaolink/kakaolink_btn_medium.png" /> </a>
+            <p class="mt-3">
+              <bw>윈도우10 전용</bw>
+            </p>
             <p>다음에 사용해 보세요..</p>
           </div>
         </div>
@@ -161,7 +168,9 @@
     <div class="container bg-white my-5">
       <div class="row no-gutters mb-0">
         <div class="col-12 col-md-8 text-center p-3 order-2 order-md-1" data-aos="fade-up">
-          <img class="shadow-left" src="https://1.bp.blogspot.com/-9FbV0RJfbWo/XfoJwSzDE4I/AAAAAAAAHj0/_9VcrVApD7QnCLQGmsHKW4fwcw-bfYQfwCLcBGAsYHQ/s1600/1.gif" alt="특허 검색식 생성" style="width: 100%;">
+          <img class="shadow-left"
+            src="https://1.bp.blogspot.com/-9FbV0RJfbWo/XfoJwSzDE4I/AAAAAAAAHj0/_9VcrVApD7QnCLQGmsHKW4fwcw-bfYQfwCLcBGAsYHQ/s1600/1.gif"
+            alt="특허 검색식 생성" style="width: 100%;">
         </div>
         <div class="col-md-4 p-0 m-0 px-md-3 mt-md-3 mt-lg-5 order-1 order-md-2" data-aos="fade-up">
           <h2 class="px-3 px-md-0"><span class="divider-v">|</span> 직관성</h2>
@@ -181,11 +190,15 @@
           </div>
         </div>
         <div class="col-12 col-md-8 text-center p-3 order-4" data-aos="fade-up">
-          <img class="shadow-right" src="https://1.bp.blogspot.com/-dESXoyOb_Tg/Xfo1EH_B0KI/AAAAAAAAHkA/3dkq8enJLcI6U5wc0TtnrOjifyBWMTKMwCLcBGAsYHQ/s1600/2.gif" alt="특허 동의어" style="width: 100%;">
+          <img class="shadow-right"
+            src="https://1.bp.blogspot.com/-dESXoyOb_Tg/Xfo1EH_B0KI/AAAAAAAAHkA/3dkq8enJLcI6U5wc0TtnrOjifyBWMTKMwCLcBGAsYHQ/s1600/2.gif"
+            alt="특허 동의어" style="width: 100%;">
         </div>
 
         <div class="col-12 col-md-8 text-center p-3 order-6 order-md-5" data-aos="fade-up">
-          <img class="shadow-left" src="https://1.bp.blogspot.com/-KzBkOvEnKik/XfoEK91SpiI/AAAAAAAAHjc/HWiARLY32ZU7GHsipv7kM0BuVXxLaIMsgCLcBGAsYHQ/s1600/3.gif" alt="특허 검색 사이트 변환" style="width: 100%;">
+          <img class="shadow-left"
+            src="https://1.bp.blogspot.com/-KzBkOvEnKik/XfoEK91SpiI/AAAAAAAAHjc/HWiARLY32ZU7GHsipv7kM0BuVXxLaIMsgCLcBGAsYHQ/s1600/3.gif"
+            alt="특허 검색 사이트 변환" style="width: 100%;">
         </div>
         <div class="col-md-4 p-0 m-0 px-md-3 mt-md-3 mt-lg-5 order-5 order-md-6" data-aos="fade-up">
           <h2 class="px-3 px-md-0"><span class="divider-v">|</span> 플랫폼간 전환</h2>
@@ -205,7 +218,9 @@
           </div>
         </div>
         <div class="col-12 col-md-8 p-3 text-center order-8 mb-0" data-aos="fade-up">
-          <img class="shadow-right" src="https://1.bp.blogspot.com/-9dOXNHhKabE/XgDTZs8oSpI/AAAAAAAAHo0/02fW3g82_ygXCbzBVwR7kRRpNjk8A7eNQCLcBGAsYHQ/s1600/4.gif" alt="특허 검색 기록" style="width: 100%;">
+          <img class="shadow-right"
+            src="https://1.bp.blogspot.com/-9dOXNHhKabE/XgDTZs8oSpI/AAAAAAAAHo0/02fW3g82_ygXCbzBVwR7kRRpNjk8A7eNQCLcBGAsYHQ/s1600/4.gif"
+            alt="특허 검색 기록" style="width: 100%;">
         </div>
       </div>
     </div>
@@ -360,8 +375,10 @@
           <p class="pb-3 pb-md-1"><b>로그인 창</b>이 뜨지만 그냥 <b>닫아도 설치가 진행</b>됩니다.</p>
           <!--<p>마이크로소프트 스토어에 <b>처음 접속</b>하면 <b>장치 간에 사용 알림</b>이 나타날 수 있지만, <b>관심 없음 버튼</b>을 클릭하면 설치가 진행됩니다.</p>-->
           <div id="store-area2" class="row" data-aos="fade-up">
-            <a id="store-button2" class="col-6 col-md-5 pb-3 pb-lg-0" href="ms-windows-store://pdp/?productid=9N798V33QDF8"><img
-                class="img-fluid" width="100%" src="https://1.bp.blogspot.com/-0rhURw5cj9s/Xf2BfUsqYEI/AAAAAAAAHl4/tfGMocdsrWQ1aMD6u_nQaRS2BqmbCQA9gCLcBGAsYHQ/s1600/store_ko2.png" alt="다운로드 버튼"></a>
+            <a id="store-button2" class="col-6 col-md-5 pb-3 pb-lg-0"
+              href="ms-windows-store://pdp/?productid=9N798V33QDF8"><img class="img-fluid" width="100%"
+                src="https://1.bp.blogspot.com/-0rhURw5cj9s/Xf2BfUsqYEI/AAAAAAAAHl4/tfGMocdsrWQ1aMD6u_nQaRS2BqmbCQA9gCLcBGAsYHQ/s1600/store_ko2.png"
+                alt="다운로드 버튼"></a>
           </div>
 
 
@@ -440,7 +457,8 @@
   <script data-cfasync="false" src="js/form-submission-handler.min.js"></script>
   <!--<script src="js/jquery.popupimg.min.js"></script>-->
   <script src="js/native-toast.min.js"></script>
-  <script src="js/jquery.da-share.min.js"></script>
+  <!--<script src="js/jquery.da-share.min.js"></script>-->
+  <script src="//developers.kakao.com/sdk/js/kakao.min.js"></script>
 
   <!-- Custom scripts for this template -->
   <!--<script src="js/creative.js" type="text/babel" data-presets="es2015,stage-2"></script>-->
